--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ coverage
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.development
+.env.test
 
 # Debug
 npm-debug.log*
@@ -25,4 +28,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # Vercel
-.vercel 
+.vercel
+
+# Sensitive files
+vercel-deployment-details.txt
+**/.env.production
+**/.env.development
+**/.env.test
+**/.env.local
+**/.env 
