--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,14 @@ coverage
 
 # Misc
 .DS_Store
+
+# Environment files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.production
-.env.development
-.env.test
+.env.*
+!.env.example
+**/.env
+**/.env.*
+!**/.env.example
 
 # Debug
 npm-debug.log*
@@ -31,9 +31,4 @@ yarn-error.log*
 .vercel
 
 # Sensitive files
-vercel-deployment-details.txt
-**/.env.production
-**/.env.development
-**/.env.test
-**/.env.local
-**/.env 
+vercel-deployment-details.txt 
