--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,16 +1,22 @@
+# Server Configuration
 NODE_ENV=development
 PORT=5001
 
 # MongoDB Connection
-MONGO_URI=mongodb+srv://your_mongodb_uri
+MONGO_URI=your_mongodb_uri
 
-# JWT
-JWT_SECRET=your_jwt_secret_key
+# JWT Configuration
+JWT_SECRET=your_jwt_secret
+JWT_EXPIRE=30d
 
 # URLs
 FRONTEND_URL=http://localhost:5173
-# Public URL for sharing links (e.g., ngrok URL)
-PUBLIC_URL=https://your-public-url.ngrok.io
+PUBLIC_URL=http://localhost:5001
+
+# Gemini AI Configuration
+GEMINI_API_KEY=your_gemini_api_key
+GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta
+GEMINI_MODEL=models/gemini-1.5-pro
 
 # Email Configuration
 # For testing, you can use services like Mailtrap.io or Ethereal
