--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -11,6 +11,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/:path*",
+      "destination": "/server.js"
+    },
+    {
       "source": "/(.*)",
       "destination": "/server.js"
     }
@@ -23,7 +27,7 @@
       "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://your-frontend.vercel.app" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://mepad-v2.vercel.app" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
       ]
