--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,13 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "dist",
   "rewrites": [
     { 
       "source": "/(.*)", 
