--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -7,14 +7,14 @@
     }
   ],
   "rewrites": [
-    { 
-      "source": "/(.*)", 
-      "destination": "/server.js" 
+    {
+      "source": "/(.*)",
+      "destination": "server.js"
     }
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
