--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
+        "build": "npm install",
         "dev": "nodemon server.js",
         "check-port": "node src/scripts/checkPort.js",
         "test": "jest"
