fix: add vercel-build script to match Vercel's expectations

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-VITE_API_URL=https://mepad-v2.vercel.app/api
+VITE_API_URL=https://${VERCEL_URL}/api
 VITE_GEMINI_API_KEY=AIzaSyD2Zxg_EP32z79Ubd-odUO_y8OYfFmNQGE
 VITE_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta
 VITE_GEMINI_MODEL=models/gemini-1.5-pro 
