--- a/Backend/.env.production
+++ b/Backend/.env.production
@@ -4,11 +4,11 @@ MONGO_URI=mongodb+srv://huznigarane:huznigarane@cluster0.nxrmy.mongodb.net/?retr
 
 JWT_SECRET=meetingmanager123456
 JWT_EXPIRE=30d
-CORS_ORIGIN=https://mepad-v2.vercel.app
+CORS_ORIGIN=https://${VERCEL_URL}
 
 # URLs
-FRONTEND_URL=https://mepad-v2.vercel.app
-PUBLIC_URL=https://mepad-v2.vercel.app
+FRONTEND_URL=https://${VERCEL_URL}
+PUBLIC_URL=https://${VERCEL_URL}
 
 # Gemini AI API Configuration
 GEMINI_API_KEY=AIzaSyD2Zxg_EP32z79Ubd-odUO_y8OYfFmNQGE
