--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,12 +6,10 @@
       "use": "@vercel/static-build"
     }
   ],
-  "buildCommand": "npm run vercel-build",
-  "outputDirectory": "dist",
-  "rewrites": [
+  "routes": [
     { 
-      "source": "/(.*)", 
-      "destination": "/index.html"
+      "src": "/(.*)", 
+      "dest": "/index.html"
     }
   ]
 }
