i removed duplications and code inconsistency

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -12,6 +12,7 @@ JWT_EXPIRE=30d
 # URLs
 FRONTEND_URL=http://localhost:5173
 PUBLIC_URL=http://localhost:5001
+CORS_ORIGIN=http://localhost:5173
 
 # Gemini AI Configuration
 GEMINI_API_KEY=your_gemini_api_key
