--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,29 +1,29 @@
 # Server Configuration
-NODE_ENV=development
-PORT=5001
+NODE_ENV=production
+PORT=8080
 
 # MongoDB Connection
-MONGO_URI=your_mongodb_uri
+MONGO_URI=mongodb+srv://username:password@yourcluster.mongodb.net/?retryWrites=true&w=majority
 
 # JWT Configuration
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE=30d
 
 # URLs
-FRONTEND_URL=http://localhost:5173
-PUBLIC_URL=http://localhost:5001
-CORS_ORIGIN=http://localhost:5173
+FRONTEND_URL=https://your-frontend-url.com
+PUBLIC_URL=https://your-api-url.com
+CORS_ORIGIN=https://your-frontend-url.com
 
 # Gemini AI Configuration
-GEMINI_API_KEY=your_gemini_api_key
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta
 GEMINI_MODEL=models/gemini-1.5-pro
 
 # Email Configuration
 # For testing, you can use services like Mailtrap.io or Ethereal
-SMTP_HOST=smtp.mailtrap.io
-SMTP_PORT=2525
-SMTP_EMAIL=your-mailtrap-username
-SMTP_PASSWORD=your-mailtrap-password
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_EMAIL=your-email-username
+SMTP_PASSWORD=your-email-password
 FROM_NAME=MePad
-FROM_EMAIL=noreply@mepad.com
+FROM_EMAIL=noreply@yourapp.com
