--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 # API Configuration
-VITE_API_URL=http://localhost:5001/api
+VITE_API_URL=https://your-api-url.com/api
 
 # Gemini AI Configuration
-VITE_GEMINI_API_KEY=your_gemini_api_key
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 VITE_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta
 VITE_GEMINI_MODEL=models/gemini-1.5-pro 
